# examen_bentoml

./: .gitignore  Makefile  bentofile.yaml  main.py  pyproject.toml  requirements.txt
data/processed/: X_test.csv  X_train.csv  y_test.csv  y_train.csv
doc/: Bentoml.md
src/: service.py
src/data/: import_raw_data.py  prepare_data.py
src/models/: list_models.py  train_model.py  train_model1.py
tests/: test.py  test_admission_service_unit.py
