[project]
name = "bentoml-univ"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bentoml==1.4.26",
    "numpy==1.26.4",
    "pandas==2.3.3",
    "scikit-learn==1.3.2",
    "pydantic",
    "requests==2.32.5",
    "pyjwt==2.10.1",
    "evidently>=0.6.5",
    "matplotlib>=3.10.1",
    "pytest>=8.4.1",
]